--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,35 @@
     package="com.example.trabajofinalcibertec">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".presentation.registro.view.RegistroActivity"></activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".presentation.carrito_agregar.view.CarritoAgregarActivity"
+            android:label="@string/title_activity_carrito_agregar"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".presentation.carrito_buscar.view.CarritoBuscarActivity" />
+        <activity android:name=".presentation.detalle.view.DetalleActivity" />
+        <activity
+            android:name=".presentation.carrito.view.CarritoActivity"
+            android:label="@string/title_activity_carrito"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".presentation.login.view.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.main.view.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
