--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation('com.github.bumptech.glide:glide:4.1.1', {
+        exclude group: "com.android.support"
+    })
 
     //dagger
     implementation 'com.google.dagger:dagger:2.16'
